a lot of changes

--- a/src/components/Task/task.module.css
+++ b/src/components/Task/task.module.css
@@ -12,3 +12,11 @@
     background-color: #DC3545;
     color: white;
 }
+.taskLinks{
+    text-decoration: none;
+    color: pink;
+}
+.taskLinks:hover{
+    text-decoration: none;
+    font-style: italic;
+}
