--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,42 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.title{
+  font-size: 36px;
+  text-align: center; 
+  font-family: 'Times New Roman', Times, serif;
+  margin-top: 10px;
+  color: palevioletred;
+}
+.not-found{
+  margin-top: 1%;
+  font-size: 68px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.not-foundIcon{
+  font-size: 120px;
+  display: flex;
+  justify-content: center;
+  margin-top: 1%;
+  color: brown;
+  cursor: pointer;
+}
+.not-foundIcon:hover {
+  color: #ff0000;
+}
+.buttonBack{
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+  text-decoration: none;
+}
+.activeLink{
+  color: pink;
+  font-weight: bold;
+}
+.activeLink:hover{
+  text-decoration: none;
+}
