--- a/src/components/Spinner/spinnerStyles.module.css
+++ b/src/components/Spinner/spinnerStyles.module.css
@@ -2,12 +2,14 @@
     width: 100%;
     height: 100vh;
     background: white;
-position: absolute;
-top:0;
-left: 0;
-display: flex;
-justify-content: center;
-align-items: center;
+    position: absolute;
+    z-index: 9999999;
+    background: rgba(255,255,255, 0.5);
+    top:0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .spinner {
