--- a/src/components/Task/task.module.css
+++ b/src/components/Task/task.module.css
@@ -1,27 +1,29 @@
 .checkbox{
     margin: 10px 5px 0px 255px;
 }
-
 .task{
     margin: 20px auto 20px;
     width: 18rem;
-    background-color: palevioletred;
+    border-radius: 10px;
+    background-color: white;
 }
 .done{
-    opacity: 0.6;
+    opacity: 0.5;
 }
 .checked{
-    background-color: #DC3545;
+    background-color: #DC3545; 
     color: white;
 }
 .taskLinks{
     text-decoration: none;
-    color: pink;
+    color: black;
 }
 .taskLinks:hover{
     text-decoration: none;
-    font-style: italic;
 }
 .sigleTaskDiv{
     width: 50%;
+}
+.options{
+    color: rgb(153, 153, 153);
 }
