completed all the homeworks and notfinished parts, also made design changes, created registration, updated and fixed the mistakes of all components, classified files

--- a/src/Style/body.css
+++ b/src/Style/body.css
@@ -1,3 +1,6 @@
 body{
-    background-color: #cccccc;
+    /* background-color: #cccccc; */
+    /* Can't choose between these two */
+    background-color: #e4e4e4;
+
 }
