--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -2,7 +2,17 @@
     width: 95%;
 }
 .dateOptions{
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
+    text-align: center;
+}
+.optionLabels{
+    border: none;
+    width: 105%;
+    padding: 5px;
+    border-bottom: 2px solid #007bff;
+    /* border-top: 2px solid #007bff; */
+    border-radius: 10px;
+
 }
