--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -2,17 +2,12 @@
     width: 95%;
 }
 .dateOptions{
-    /* display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center; */
-    text-align: center;
+    align-items: center;
 }
 .optionLabels{
     border: none;
-    width: 105%;
-    padding: 5px;
-    border-bottom: 2px solid #007bff;
-    /* border-top: 2px solid #007bff; */
-    border-radius: 10px;
-
+    padding: 7px 28px;
+    border-left: 1px solid #007bff;
 }
