--- a/src/Style/body.css
+++ b/src/Style/body.css
@@ -1,6 +1,18 @@
-body{
+/* body{ */
     /* background-color: #cccccc; */
     /* Can't choose between these two */
+    /* background-color: #e4e4e4;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column; */
+/* } */
+/* #root{
     background-color: #e4e4e4;
-
-}
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  } */
