--- a/src/components/NavMenu/navMenuStyle.module.css
+++ b/src/components/NavMenu/navMenuStyle.module.css
@@ -1,41 +1,41 @@
-.navbarMenu{
-  /* border-bottom: 1px solid; */
-  /* box-shadow: 0px 5px 5px grey ; */
-  border-radius: 10px;
-  /* width: 50%; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.navbarMenu {
+    /* border-bottom: 1px solid; */
+    /* box-shadow: 0px 5px 5px grey ; */
+    /* width: 50%; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
 }
-.activeLink{
+.activeLink {
     color: #28a745;
     font-weight: bold;
-  }
-.activeLink:hover{
-  text-decoration: none;
 }
-.homePageNav{
-  padding: 5px 10px;
+.activeLink:hover {
+    text-decoration: none;
 }
-.homePageNav:hover{
-  text-decoration: none;
-  padding: 5px 10px;
-  color: #28a745;
-  background-color: #7dc78e65;
-  border-radius: 8px;
+.homePageNav {
+    padding: 5px 10px;
 }
-.navLinks{
-  font-size: 18px;
-  padding: 5px 10px;
-  margin-right: 2%;
+.homePageNav:hover {
+    text-decoration: none;
+    padding: 5px 10px;
+    color: #28a745;
+    background-color: #7dc78e65;
+    border-radius: 8px;
 }
-.navLinks:hover{
-  text-decoration: none;
-  color: #28a745;
-  background-color: #7dc78e65;
-  border-radius: 8px;
+.navLinks {
+    font-size: 18px;
+    padding: 5px 10px;
+    margin-right: 2%;
 }
-.logOutDiv{
-  color: #28a745;
-  background-color: #7dc78e65;
+.navLinks:hover {
+    text-decoration: none;
+    color: #28a745;
+    background-color: #7dc78e65;
+    border-radius: 8px;
+}
+.logOutDiv {
+    color: #28a745;
+    background-color: #7dc78e65;
 }
