--- a/src/components/Task/task.module.css
+++ b/src/components/Task/task.module.css
@@ -1,36 +1,44 @@
-.titleXcheckbox{
+.titleXcheckbox {
     display: flex;
     justify-content: space-between;
 }
-.task{
+.task {
     margin: 20px auto 20px;
     width: 20rem;
     border-radius: 10px;
     background-color: white;
 }
-.done{
+.done {
     opacity: 0.7;
     /* background-color: rgb(179, 205, 223); */
     /* Can't choose between these two */
     background-color: rgb(179, 223, 185);
 }
-.checkbox{
+.checkbox {
     cursor: pointer;
 }
-.checked{
-    background-color: #DC3545; 
+.checked {
+    background-color: #dc3545;
     color: white;
 }
-.taskLinks{
+.taskLinks {
     text-decoration: none;
     color: black;
 }
-.taskLinks:hover{
+.taskLinks:hover {
     text-decoration: none;
 }
-.sigleTaskDiv{
+.sigleTaskDiv {
     width: 50%;
 }
-.options{
+.options {
     color: rgb(153, 153, 153);
+}
+
+.checked .options {
+    color: black;
+}
+
+.checked .taskLinks {
+    color: white;
 }
