--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,31 @@
+/* * {
+    margin: 0;
+    padding: 0;
+} */
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    width: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
 }
-.mainFooter{
-  margin-top: 26%;
+
+#root {
+    /* background-color: #e4e4e4; */
+    background-color: #f6f8f9;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
-.footerText{
-  font-size: 16px;
-  padding-left: 5px;
-  margin-bottom: 50%;
+
+main {
+    flex: auto;
 }
