--- a/src/components/Footer/footerStyle.module.css
+++ b/src/components/Footer/footerStyle.module.css
@@ -1,15 +1,8 @@
-.mainFooter{
-    /* position: absolute; */
-    /* bottom: 0; */
+.mainFooter {
     background: #444444;
-    height: 59px;
-    /* margin-top: 18%; */
-    font-family: 'Open Sans', sans-serif;
-    color: #FFFFFF;
-    padding: 20px;
+    height: 45px;
+    font-family: "Open Sans", sans-serif;
+    color: #ffffff;
+    padding: 12px;
+    text-align: center;
 }
-/* .footerText{
-    font-size: 16px;
-    padding-left: 5px;
-    margin-bottom: 50%;
-} */
