--- a/src/components/NavMenu/navMenuStyle.module.css
+++ b/src/components/NavMenu/navMenuStyle.module.css
@@ -1,11 +1,8 @@
 .navbarMenu {
-    /* border-bottom: 1px solid; */
-    /* box-shadow: 0px 5px 5px grey ; */
-    /* width: 50%; */
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 .activeLink {
     color: #28a745;
@@ -31,11 +28,20 @@
 }
 .navLinks:hover {
     text-decoration: none;
-    color: #28a745;
-    background-color: #7dc78e65;
+    /* color: #28a745; */
+    /* background-color: #7dc78e65; */
+    background-color: #444444;
+    color: white;
     border-radius: 8px;
 }
 .logOutDiv {
     color: #28a745;
     background-color: #7dc78e65;
+}
+.usernameDiv {
+    margin-right: 2px;
+    padding: 6px 9px;
+    border-radius: 5px;
+    background-color: #7dc78e65;
+    border: 1px solid #28a745;
 }
