--- a/src/components/Pages/Register/registerStyle.module.css
+++ b/src/components/Pages/Register/registerStyle.module.css
@@ -1,32 +1,35 @@
-.main{
+.main {
     display: flex;
     justify-content: center;
-    align-items: center;    
-    height: calc(100vh - 208px);
+    align-items: center;
+    /* height: calc(100vh - 208px); */
+    height: calc(100vh - 135px);
 }
-.inner{
+.inner {
     width: 100%;
     font-size: 18px;
     background-color: white;
     padding: 15px;
     border-radius: 20px;
     text-align: center;
-    border-bottom: 1px solid;
-    border-left: 1px solid;
-    border-right: 1px solid;
-    box-shadow: 10px 10px 5px grey ;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    box-shadow: 11px 10px 8px grey;
 }
-.heading{
+.heading {
     margin-bottom: 20px;
     text-align: center;
 }
-.submitContainer{
+.submitContainer {
     text-align: center;
 }
-.lastText{
+.lastText {
     padding-top: 5px;
     font-size: 15px;
 }
-.invalid{
+.invalid {
     border: 1px solid red;
-} 
+}
+.formText {
+    font-size: 12px;
+    text-align: start;
+}
