--- a/src/components/Pages/SingleTask/singleTask.module.css
+++ b/src/components/Pages/SingleTask/singleTask.module.css
@@ -1,30 +1,22 @@
-.singlePage{
+.singlePage {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 6%;
+    width: 100%;
+    height: calc(100vh - 135px);
 }
-.singlePageInnerDiv{
+.singlePageInnerDiv {
     width: 50%;
     font-size: 18px;
     background-color: white;
     padding: 15px;
     border-radius: 20px;
-    border-bottom: 1px solid;
-    border-left: 1px solid;
-    border-right: 1px solid;
-    box-shadow: 10px 10px 5px grey ;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    box-shadow: 10px 10px 5px grey;
 }
-.options{
-    color: #138496;
+.options {
+    color: rgb(153, 153, 153);
 }
-.buttons{
+.buttons {
     text-align: end;
-}
-.done{
-    opacity: 0.7;
-    /* background-color: rgb(179, 205, 223); */
-    /* Can't choose between these two */
-    background-color: rgb(179, 223, 185);
-
 }
